manifests/argocd/01ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress-ui
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.thexiao77.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: middleware-https-argocd
    - kind: Rule
      match: Host(`argocd.thexiao77.com`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-web-ui-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-https-argocd
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
